--- a/style.css
+++ b/style.css
@@ -325,14 +325,15 @@ a {
         border-radius: 5px;
       }
       input[id="result_check"] + label:hover {
-        background-color: rgb(255, 255, 226);
+        background-color: rgba(255, 255, 255, 0.541);
         cursor: pointer;
+        font-weight: normal;
         box-shadow: 0 2px
       }
       div[class="sidebar"]{
         width: 100%;
         height: 120px;
-        background-color: rgba(88, 85, 85, 0.7);
+        background-color: rgba(88, 85, 85, 0.849);
         position: fixed;
         bottom: -120px;
         z-index: 1;
