feat:슬라이드바 색상변경

--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ a {
           border-bottom: 0.1px solid;
           width: 340px;
           height: 50px;
-          background-color: rgb(250, 249, 237);
+          background-color: #fde9bd;
           border: 1px solid rgb(51, 50, 50);
           color:rgb(22, 22, 22);
           box-shadow: none;
@@ -184,7 +184,7 @@ a {
 
 
         button:hover {
-          background-color: rgb(204, 248, 206);
+          background-color: rgb(214, 252, 216);
           cursor: pointer;
           box-shadow: 0 2px
         }
@@ -333,7 +333,7 @@ a {
       div[class="sidebar"]{
         width: 100%;
         height: 120px;
-        background-color: rgba(88, 85, 85, 0.849);
+        background-color: rgba(161, 152, 131, 0.85);
         position: fixed;
         bottom: -120px;
         z-index: 1;
