--- a/style.css
+++ b/style.css
@@ -348,15 +348,14 @@ a {
 
 .image_wrapper{
     position: relative;
-    padding-top:100%;
     }
 
 .image_wrapper .child{
-    position: absolute;
-    width:100%;
-    height:100%;
-    top:0;
+    position: center;
+    align: center;
     left:0;
     right:0;
-    bottom:0;
     }
+
+
+    .child
